input.css customisation

--- a/src/index.html
+++ b/src/index.html
@@ -32,15 +32,19 @@
 </head>
 
 <body>
+    <!-- ====================nav markup start==================== -->
     <nav>
+        <!-- =======================nav top part start====================== -->
         <div class="bg-gray-800 border-b-4 border-yellow-300">
             <div class="container mx-auto">
                 <div class="top h-12 px-40  flex justify-between items-center text-sm text-white">
                     <div class="topleft flex gap-x-7 items-center">
-                        <span class="topleftcontact flex gap-x-1"><a href=""><i class="fa-sharp fa-regular fa-envelope-dot"></i></a>
+                        <span class="topleftcontact flex gap-x-1"><a href=""><i
+                                    class="fa-sharp fa-regular fa-envelope-dot"></i></a>
                             <p>mail@yourcompany.com</p>
                         </span>
-                        <span class="topleftcontact flex gap-x-1"><a href=""><i class="fa-sharp fa-light fa-phone-volume"></i></a>
+                        <span class="topleftcontact flex gap-x-1"><a href=""><i
+                                    class="fa-sharp fa-light fa-phone-volume"></i></a>
                             <p>+896 120 5889 (Toll free)</p>
                         </span>
                     </div>
@@ -53,6 +57,7 @@
                 </div>
             </div>
         </div>
+        <!-- =======================nav top part start==================== -->
         <div class="bottom bg-red-600">
             <div class="container mx-auto">
                 <div class="bottomwrapper h-24 flex justify-between items-center px-40 text-white">
@@ -76,19 +81,20 @@
             </div>
         </div>
     </nav>
-    <!-- ============hero markup============= -->
+    <!-- ====================nav markup end==================== -->
+
+    <!-- ============hero markup start============= -->
     <section class="hero">
         <div class="container mx-auto">
-            <div class="herocontent px-40 text-white">
-                <h1 class="herocontent__title font-bold pb-8" >We exist since 1975 on the oil and gas industry.</h1>
-                <a href="#" class="btn text-base font-semibold"><button class="border-2 border-white bg-red-600 px-10 py-3">LEARN MORE</button></a>
+            <div class="herocontent px-40  text-white">
+                <h1 class="herocontent__title font-bold pb-8">We exist since 1975 on the oil and gas industry.</h1>
+                <a href="#" class="btn text-base font-semibold"><button
+                        class="border-2 border-white bg-red-600 px-10 py-3">LEARN MORE</button></a>
             </div>
-
         </div>
 
     </section>
-    <!-- ============hero markup============= -->
-
+    <!-- ============hero markup end============= -->
 </body>
 
 </html>
