hero button customisation

--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,8 @@
         <div class="container mx-auto">
             <div class="herocontent px-40  text-white">
                 <h1 class="herocontent__title font-bold pb-8">We exist since 1975 on the oil and gas industry.</h1>
-                <a href="#" class="btn text-base font-semibold"><button
-                        class="border-2 border-white bg-red-600 px-10 py-3">LEARN MORE</button></a>
+                <a href="#" class=" text-base font-semibold"><button
+                        class="btn border-2 border-white bg-red-600 px-10 py-3">LEARN MORE</button></a>
             </div>
         </div>
 
